sort-box set @input and @output

--- a/src/app/pets/pets-list/pets-list.component.html
+++ b/src/app/pets/pets-list/pets-list.component.html
@@ -8,63 +8,10 @@
   </div>
 
   <!-- Sort Form -->
-  <div class="sort-box">
-    <h2 class="sort-box__title">Sort by:</h2>
-
-    <form class="sort-box__form" novalidate>
-      <div class="sort-box__group">
-        <label for="name" class="sort-box__group-label">
-          <input
-            class="sort-box__group-radioButton"
-            type="radio"
-            name="optRadio"
-            id="name"
-          />Name
-        </label>
-      </div>
-      <div class="sort-box__group">
-        <label for="kind" class="sort-box__group-label">
-          <input
-            class="sort-box__group-radioButton"
-            type="radio"
-            name="optRadio"
-            id="kind"
-          />Kind
-        </label>
-      </div>
-      <div class="sort-box__group">
-        <label for="height" class="sort-box__group-label">
-          <input
-            class="sort-box__group-radioButton"
-            type="radio"
-            name="optRadio"
-            id="height"
-          />Height
-        </label>
-      </div>
-      <div class="sort-box__group">
-        <label for="weight" class="sort-box__group-label">
-          <input
-            class="sort-box__group-radioButton"
-            type="radio"
-            name="optRadio"
-            id="weight"
-          />Weight
-        </label>
-      </div>
-      <div class="sort-box__group">
-        <label for="length" class="sort-box__group-label">
-          <input
-            class="sort-box__group-radioButton"
-            type="radio"
-            name="optRadio"
-            id="length"
-          />Length
-        </label>
-      </div>
-      <button type="submit" class="sort-box__button">Sort</button>
-    </form>
-  </div>
+  <app-pets-sort
+    (sorted)="onSorted($event)"
+    [options]="petOptions"
+  ></app-pets-sort>
 
   <!-- Pets List-->
 
