refactor sortFn > utilities

--- a/src/app/pets/pets-list/pets-list.component.html
+++ b/src/app/pets/pets-list/pets-list.component.html
@@ -30,7 +30,7 @@
     <h2>Pets catalogue:</h2>
     <ul class="pets__list">
       <li *ngFor="let pet of petslist; let i = index" class="pets__list-item">
-        <a [routerLink]="i">
+        <a routerLink="{{ pet.id }}">
           <img
             [src]="pet.photo_url"
             alt="A {{ pet.kind }} named {{ pet.name }}"
