--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,19 @@
 <app-loader></app-loader>
 <div class="container">
+
   <header class="header">
     <div class="header__logo-box">
-      Pets Logo
+      <img
+        src="../assets/images/black_and_white_whiskey_logo.jpg"
+        alt="Black and White Dogs Whiskey Lovers"
+        class="header__logo"
+      />
     </div>
     <div class="header__title-box">
-      <h1 class="heading">The Pets Catalogue</h1>
+      <h1 class="heading-primary">The Pets Catalogue</h1>
     </div>
   </header>
+
   <main class="content">
     <router-outlet></router-outlet>
   </main>
