--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,35 @@
-html {
-  height: 100vh;
-  width: 100vw;
+.container {
+  max-width: 120rem;
+  margin: 8rem auto;
+  background-color: var(--color-grey-light-1);
+  box-shadow: var(--shadow-dark);
+  min-height: 50rem;
+
+  .header {
+    font-size: 3rem;
+    background-color: var(--color-white);
+    border-bottom: var(--line);
+
+    display: flex;
+    align-items: center;
+    padding: 4rem 0;
+
+    &__logo-box {
+      display: flex;
+      margin-left: 4rem;
+
+      .header__logo {
+        height: 18rem;
+        border-radius: 100%;
+        border: 2px solid var(--color-grey-light-2);
+        box-shadow: var(--shadow-light) 0 2rem 5rem rgba(0, 0, 0, 0.06);
+      }
+    }
+
+    &__title-box {
+      display: inline-flex;
+      justify-content: center;
+      flex: 1;
+    }
+  }
 }
