styling before pets-container

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<app-loader></app-loader>
+<!-- <app-loader></app-loader> -->
 <div class="container">
-
   <header class="header">
     <div class="header__logo-box">
       <img
