--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -32,4 +32,10 @@
       flex: 1;
     }
   }
+
+  .content {
+    display: block;
+    padding: 0 4rem;
+    background-color: var(--color-white);
+  }
 }
