--- a/src/app/pets/pets-list/list-controls/list-controls.component.html
+++ b/src/app/pets/pets-list/list-controls/list-controls.component.html
@@ -1,4 +1,5 @@
 <div class="pets-controls__content">
+  <h2 class="pets-controls__title">Go to Page:</h2>
   <a
     *ngFor="let item of links"
     class="pets-controls__link"
