--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -6,6 +6,7 @@
 
   --color-secondary-light: #ffb900;
   --color-secondary-dark: #ff7730;
+  --color-tertiary: rgb(250 235 215);
 
   --color-tertiary-light: #2998ff;
   --color-tertiary-dark: #5643fa;
@@ -19,6 +20,8 @@
 
   --color-white: #fff;
   --color-black: #000;
+
+  --default-font-size: 1.6rem;
 
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
   --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
