--- a/src/app/shared/loader/loader.component.scss
+++ b/src/app/shared/loader/loader.component.scss
@@ -1,3 +1,10 @@
+p {
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  font-weight: 400;
+  transform: translateY(4.5rem);
+  color: var(--color-black);
+}
 .lds-ring {
   display: flex;
   align-items: center;
@@ -16,10 +23,10 @@
   position: absolute;
   width: 51px;
   height: 51px;
-  border: 6px solid #2102cf;
+  border: 6px solid var(--color-primary-dark);
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #2102cf transparent transparent transparent;
+  border-color: var(--color-primary-dark) transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
